tests/NormalTests/paczka2/big_fuzzy/13334398.err
Error in line 3: UZCKqLmrSl A928 0,0
Error in line 4: dgiXq2wKUCW S427 66,6
Error in line 19: ma9OAeqY5 A928 20,9
Error in line 21: 5Xkb9rSh S427 94,0
Error in line 24: ma9OAeqY5 S427 2,1
Error in line 18: 42a A841 56,8
Error in line 38: ma9OAeqY5 A841 72,8
Error in line 32: A928 A841 61,3
Error in line 56: A928 S427 85,7
Error in line 52: GZVj A928 28,2
Error in line 51: 5Xkb9rSh A841 27,8
Error in line 68: A928 A841 8,3
Error in line 73: dgiXq2wKUCW S427 88,2
Error in line 70: A928 S427 34,6
Error in line 69: ma9OAeqY5 A963 52,9
Error in line 84: UZCKqLmrSl S427 13,7
Error in line 72: 42a A928 50,7
Error in line 92: 42a S427 0,5
Error in line 85: A928 A963 77,9
Error in line 100: UZCKqLmrSl A928 252,9
Error in line 103: UZCKqLmrSl S427 3,59
Error in line 93: 42a A928 98,6
Error in line 116: 42a A963 16,7
Error in line 137: 42a A841 1,61
Error in line 120: A928 A928 144,2
Error in line 136: 42a S427 15,2
Error in line 139: GZVj A841 44,0
Error in line 146: ma9OAeqY5 A841 67,2
Error in line 152: 5Xkb9rSh A928 90,4
Error in line 155: 5Xkb9rSh A841 77,5
Error in line 168: dgiXq2wKUCW A841 79,6
Error in line 179: A928 A928 31,0
Error in line 141: 42a A841 3,2
Error in line 203: dgiXq2wKUCW S427 19,7
Error in line 204: GZVj A928 50,1
Error in line 209: GZVj S427 23,6
Error in line 219: ma9OAeqY5 A928 69,0
Error in line 220: GZVj A963 82,6
Error in line 226: 42a S427 64,3
Error in line 231: UZCKqLmrSl A928 90,4
Error in line 232: dgiXq2wKUCW A963 92,8
Error in line 239: A928 S427 88,4
